<resources>
    <string name="app_name">CineXplora</string>
    <string name="error_1">Oops!</string>
    <string name="error_2">We couldn\'t connect to the server. Please check your connection.</string>
    <string name="try_again">Try Again</string>
    <string name="nav_watchlist">Watchlist</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_follow_up">Tracking</string>
    <string name="listFragmentTitle">Explore</string>
    <string name="explore_title">Explore</string>
    <string name="explora">Explore</string>
    <string name="detailTitle">Details</string>
    <string name="btn_watch_trailer">Watch Trailer</string>
    <string name="title_synopsis">Synopsis</string>
    <string name="title_info">Information</string>
    <string name="label_type">Type</string>
    <string name="label_release_date">Release Date</string>
    <string name="label_budget">Budget</string>
    <string name="label_status">Status</string>
    <string name="label_seasons">Seasons</string>
    <string name="label_episodes">Episodes</string>
    <string name="type_movie">Movie</string>
    <string name="type_tv_show">TV Show</string>
    <string name="empty_watchlist_series_title">Your TV series list is empty</string>
    <string name="empty_watchlist_series_subtitle">Discover new seasons and add them to your list.</string>
    <string name="btn_explore_series">Explore series</string>
    <string name="empty_watchlist_title">Your movie watchlist is empty</string>
    <string name="empty_watchlist_subtitle">Explore our movie catalog!</string>
    <string name="btn_explore_catalog">Explore catalog</string>
    <string name="title_add_new_tracking">New Tracking</string>
    <string name="type_series">Type</string>
    <string name="label_title">Title</string>
    <string name="hint_title">Title</string>
    <string name="hint_title_placeholder">Stranger Things…</string>
    <string name="label_date_finished">Date finished</string>
    <string name="hint_date_watched">03/03/2025</string>
    <string name="hint_select_date">03/03/2000</string>
    <string name="label_my_rating">Rating</string>
    <string name="label_add_memory">Memory image</string>
    <string name="text_tap_to_add_image">Add image (optional)</string>
    <string name="btn_save_tracking">Save tracking</string>
    <string name="nav_detail">Details</string>
    <string-array name="languages_array">
        <item>Spanish</item>
        <item>English</item>
    </string-array>
    <string name="default_web_client_id">514811399414-elf3qo3nrvama013n9sdr5tfohre31rq.apps.googleusercontent.com</string>
    <string name="hint_search_title">Search by title…</string>
    <string name="label_sort_by">Sort by</string>
    <string name="sort_date_desc">Newest</string>
    <string name="sort_date_asc">Oldest</string>
    <string name="sort_rating_desc">Best</string>
    <string name="sort_rating_asc">Worst</string>
    <string name="tooltip_sort_date_desc">Fecha: más reciente primero</string>
    <string name="tooltip_sort_date_asc">Fecha: más antiguo primero</string>
    <string name="tooltip_sort_rating_desc">Valoración: mejor primero</string>
    <string name="tooltip_sort_rating_asc">Valoración: peor primero</string>
    <string name="btn_advanced_filters">Advanced filters</string>
    <string name="label_date_range">Date range</string>
    <string name="hint_date_from">From</string>
    <string name="hint_date_to">To</string>
    <string name="label_rating_range">Rating range</string>
    <string name="hint_rating_min">Min (0–5)</string>
    <string name="hint_rating_max">Max (0–5)</string>
    <string name="btn_apply_filters">Apply</string>
    <string name="btn_clear_filters">Clear</string>
    <string name="msg_no_results">No results match your filters</string>
    <string name="msg_no_tracking_yet">You haven\'t added any tracking yet</string>
    <string name="msg_press_plus">Press the + button to start</string>
    <string name="error_min_greater_than_max">Minimum cannot exceed maximum</string>
    <string name="error_rating_range">Must be between 0 and 5</string>
    <string name="error_date_from_after_to">Start date cannot be after end date</string>
    <string name="title_validation_error">Validation error</string>
    <string name="msg_fix_filter_errors">Please fix the errors in the filters</string>
    <string name="btn_change_photo">Change photo</string>
    <string name="label_profile_photo">Profile photo (optional)</string>
    <string name="title_settings">Settings</string>
    <string name="label_username">Username</string>
    <string name="label_preferred_language">Preferred language</string>
    <string name="label_data_storage">Data &amp; Storage</string>
    <string name="label_wifi_only">Load images only on Wi-Fi</string>
    <string name="label_wifi_subtitle">Save mobile data by loading images only on Wi-Fi</string>
    <string name="label_appearance">Appearance</string>
    <string name="btn_light">Light</string>
    <string name="btn_dark">Dark</string>
    <string name="btn_save_preferences">Save Preferences</string>
    <string name="btn_reset_defaults">Reset to defaults</string>
    <string name="btn_logout">Log Out</string>
    <string name="msg_settings_saved">Settings saved successfully</string>
    <string name="msg_settings_reset">Settings restored</string>
    <string name="dialog_logout_title">Log Out</string>
    <string name="dialog_logout_message">Are you sure you want to log out?</string>
    <string name="dialog_logout_confirm">Log Out</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_delete_title">Delete tracking</string>
    <string name="dialog_delete_message">Are you sure you want to delete \'%s\'?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="msg_deleted">%s deleted</string>
    <string name="dialog_undo">Undo</string>
    <string name="dialog_welcome_title">Welcome!</string>
    <string name="dialog_welcome_message">Hi! To personalize your experience, you can set your name in Settings.</string>
    <string name="dialog_go_to_settings">Go to Settings</string>
    <string name="dialog_later">Later</string>
    <string name="dialog_tracking_pending_title">Pending tracking</string>
    <string name="dialog_tracking_pending_message">Hi, %1$s. Have you watched your pending %2$s %3$s?</string>
    <string name="dialog_add_tracking">Add Tracking</string>
    <string name="dialog_not_yet">Not yet</string>
    <string name="type_movie_lower">movie</string>
    <string name="type_serie_lower">TV show</string>
    <string name="dialog_tracking_saved_title">Tracking saved</string>
    <string name="dialog_tracking_saved_message">The tracking has been saved successfully.</string>
    <string name="dialog_accept">OK</string>
    <string name="msg_already_tracked">You already have this title</string>
    <string name="label_director_name">Director name</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Log In</string>
    <string name="link_already_account">Already have an account?</string>
    <string name="link_enter_here">Enter here</string>
    <string name="link_no_account">Don\'t have an account?</string>
    <string name="link_register_here">Register here</string>
    <string name="link_forgot_password">Forgot your password?</string>
    <string name="login_welcome">Welcome</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="login_or_continue_with">Or continue with</string>
    <string name="btn_google_signin">Continue with Google</string>
    <string name="error_login_invalid">Incorrect email or password</string>
    <string name="label_comments_optional">Comments (optional)</string>
    <string name="hint_write_comment">Write your comment here…</string>
    <string name="hint_select_date_text">Select date</string>
    <string name="error_title_required">Title is required</string>
    <string name="error_date_required">Date is required</string>
    <string name="error_write_title">Enter a title…</string>
    <string name="error_upload_image">Error uploading image: %s</string>
    <string name="error_register">Registration error</string>
    <string name="msg_no_pending_movies">You have no pending movies</string>
    <string name="msg_no_pending_series">You have no pending TV shows</string>
    <string name="msg_empty_list">Your list is empty!</string>
    <string name="label_your_comment">Your comment</string>
    <string name="hint_username_placeholder">e.g. Cinefilo123</string>
    <string name="label_add_photo">Add profile photo</string>
    <string name="title_cast">Cast</string>
    <string name="title_crew">Crew</string>
    <string name="label_direction">Direction: </string>
    <string name="label_screenplay">Screenplay: </string>
    <string name="btn_see_more_cast">See more</string>
    <string name="title_person_detail">Person Detail</string>
    <string name="title_personal_info">Personal Information</string>
    <string name="label_birthday">Born:</string>
    <string name="label_birth_place">Place of birth:</string>
    <string name="label_deathday">Died:</string>
    <string name="title_biography">Biography</string>
    <string name="title_known_for">Known For</string>
    <string name="nav_favorite_actors">Favorite Actors</string>
    <string name="btn_add_favorite_actor">Add to Favorite Actors</string>
    <string name="btn_remove_favorite_actor">Remove from Favorites</string>
    <string name="dialog_remove_favorite_title">Remove favorite</string>
    <string name="dialog_remove_favorite_message">Are you sure you want to remove %s from your favorite actors?</string>
    <string name="msg_no_favorite_actors">You haven\'t added any favorite actors yet</string>
    <string name="msg_add_favorite_actors_hint">Browse movies and series to discover actors you love</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_email_invalid">Enter a valid email (e.g. user@domain.com)</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_weak">Minimum 8 characters, at least one letter and one number</string>
    <string name="error_confirm_password">Repeat the password</string>
    <string name="error_passwords_mismatch">Passwords do not match</string>
    <string name="msg_already_in_list">Already in your list</string>
    <string name="msg_added_to_watchlist">Added to watchlist: %s</string>
    <string name="msg_no_trailer">No trailer available.</string>
    <string name="msg_load_more_error">Error loading more content</string>
    <string name="msg_google_cancelled">Google sign-in cancelled.</string>
    <string name="msg_google_account_error">Could not get Google account.</string>
    <string name="msg_google_error">Google Sign-In error: %s</string>
    <string name="msg_google_error_code">Error code: %s - %s</string>
    <string name="msg_wifi_only_mode">Wi-Fi only mode enabled.\nConnect to a Wi-Fi network to see content.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_all">All</string>
    <string name="label_filters">Filters</string>
    <string name="label_min_rating">Minimum Rating</string>
    <string name="btn_sort">Sort</string>
    <string name="sort_newest">Newest first</string>
    <string name="sort_oldest">Oldest first</string>
    <string name="sort_best_rated">Best rated</string>
    <string name="sort_worst_rated">Worst rated</string>
    <string name="chip_date">Date: %s – %s</string>
    <string name="chip_rating">★ %s+</string>
    <string name="label_genre">Genre</string>
</resources>